--- a/src/locale/pt-br.json
+++ b/src/locale/pt-br.json
@@ -24,11 +24,7 @@
         "angularDescription": "Framework escalável.",
         "nodeDescription": "Ambiente de Servidor JavaScript.",
         "nextDescription": "Framework JavaScript para desenvolvimento web.",
-        "studyingandlearningTitle": "Estudando & aprendendo",
-        "skillstexts1": "Planos pro futuro.",
-        "skillstexts2": "Atualmente, meu foco principal é no Desenvolvimento Front-end. Acredito que a experiência do usuário é fundamental, e estou empenhado em criar interfaces de usuário atraentes e intuitivas que proporcionem uma ótima experiência aos usuários finais..",
-        "skillstexts3": "Além disso, estou sempre em busca de aprendizado contínuo. Estou explorando novas tecnologias, como Angular e C#, para expandir ainda mais meu conjunto de habilidades e abraçar desafios mais amplos no futuro.",
-        "skillstexts4": "Meu objetivo final é me tornar um desenvolvedor Fullstack, mas estou ciente da importância de construir uma base sólida no Front-end antes de prosseguir para o Back-end. Estou comprometido em me manter atualizado com as últimas tendências e melhores práticas do setor, para que eu possa contribuir de maneira significativa para projetos empolgantes e desafiadores." 
+        "studyingandlearningTitle": "Estudando & aprendendo"
     },
     "project": {
         "codeContent1": "projeto1 {\n    nome: 'DevInsights',\n    tecnologias: 'ReactJS, Styled Components & React Router Dom'\n}",
