--- a/src/locale/pt-br.json
+++ b/src/locale/pt-br.json
@@ -14,6 +14,7 @@
         "javascriptDescription": "Linguagem para desenvolvimento web.",
         "typescriptDescription": "Superset do JavaScript.",
         "sqlDescription": "Gerenciamento de Dados Relacionais.",
+        "mongoDBDescription": "Gerenciamento de Dados Não Relacionais",
         "mysqlDescription": "Gerenciamento de Banco de Dados Relacional",
         "styledcomponentsDescription": "Estilização de componentes.",
         "sassDescription": "Pré-processador de estilos.",
