feat: add some new skills

--- a/src/locale/en-us.json
+++ b/src/locale/en-us.json
@@ -15,7 +15,10 @@
         "typescriptDescription": "JavaScript superset.",
         "sqlDescription": "Relational Data Management.",
         "mysqlDescription": "Relational Database Management",
-        "mongoDBDescription": "NoSQL Database Management",
+        "jestDescription": "Library for tests.",
+        "reduxDescription": "Global state management.",
+        "zustandDescription": "Global state management.",
+        "mongoDBDescription": "NoSQL Database Management.",
         "styledcomponentsDescription": "Component styling.",
         "sassDescription": "Styles preprocessor.",
         "tailwindDescription": "Utility CSS framework.",
