--- a/src/locale/pt-br.json
+++ b/src/locale/pt-br.json
@@ -16,6 +16,9 @@
         "sqlDescription": "Gerenciamento de Dados Relacionais.",
         "mongoDBDescription": "Gerenciamento de Dados Não Relacionais",
         "mysqlDescription": "Gerenciamento de Banco de Dados Relacional",
+        "jestDescription": "Biblioteca para testes.",
+        "reduxDescription": "Gerenciamento de estado global.",
+        "zustandDescription": "Gerenciamento de estado global.",
         "styledcomponentsDescription": "Estilização de componentes.",
         "sassDescription": "Pré-processador de estilos.",
         "tailwindDescription": "Framework CSS utilitário.",
